argocd/raw-manifests/local-production/monitoring/loki/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: loki-production-vs
  namespace: istio-system
spec:
  hosts:
    - "loki.prod.local"
  gateways:
    - istio-ingressgateway-production
  http:
    - route:
        - destination:
            host: mon-loki-production-gateway.monitoring.svc.cluster.local
            port:
              number: 80
